<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week2_standard2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="android:color/transparent"
            android:drawableEnd="@drawable/ic_baseline_list_24"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/calender"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <Button
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:background="android:color/transparent"
            android:textColor="@color/black"
            android:text="@string/date"
            android:textSize="18dp"
            android:drawableEnd="@drawable/ic_baseline_expand_more_24" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/button1"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="android:color/transparent"
                android:text="@string/sun"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button2"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="android:color/transparent"
                android:text="@string/mon"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="android:color/transparent"
                android:text="@string/tue"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button4"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="android:color/transparent"
                android:text="@string/wed"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button5"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="android:color/transparent"
                android:text="@string/thu"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button6"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="android:color/transparent"
                android:text="@string/fri"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/button7"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="android:color/transparent"
                android:text="@string/sat"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button8"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="android:color/transparent"
                android:text="@string/tf"
                android:textColor="@color/black"
                android:textSize="21dp"/>
            <Button
                android:id="@+id/button9"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="android:color/transparent"
                android:text="@string/ts"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:drawableBottom="@drawable/ic_baseline_more_horiz_24"/>
            <Button
                android:id="@+id/button10"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="android:color/transparent"
                android:text="@string/ts2"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:drawableBottom="@drawable/ic_baseline_more_horiz_24"/>
            <Button
                android:id="@+id/button11"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="android:color/transparent"
                android:text="@string/te"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:drawableBottom="@drawable/ic_baseline_more_horiz_24"/>
            <Button
                android:id="@+id/button12"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="android:color/transparent"
                android:text="@string/tn"
                android:textColor="@color/black"
                android:textSize="20dp"
                />
            <Button
                android:id="@+id/button13"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="android:color/transparent"
                android:text="@string/tt"
                android:textColor="@color/black"
                android:textSize="20dp"/>
            <Button
                android:id="@+id/button14"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:background="android:color/transparent"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="20dp"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button15"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="android:color/transparent"
                android:drawableEnd="@drawable/ic_baseline_ballot_24"
                />

            <Button
                android:id="@+id/button16"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:background="android:color/transparent"
                android:text="@string/cg"
                android:textColor="@color/teal_700"
                android:textSize="15dp"
                android:gravity="left"/>


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_dashboard_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_assignment_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_access_alarm_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_mail_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>