<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week2_standard3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="android:color/transparent"
            android:drawableEnd="@drawable/ic_baseline_list_24"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/alarm"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="android:color/transparent"
            android:textColor="@color/black"
            android:text="@string/due"
            android:textSize="18dp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button15"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="android:color/transparent"
                android:drawableEnd="@drawable/ic_baseline_ballot_24"/>

            <Button
                android:id="@+id/button16"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:background="android:color/transparent"
                android:text="@string/algo"
                android:textColor="@color/pink"
                android:textSize="15dp"
                android:gravity="left"/>
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="android:color/transparent"
            android:textColor="@color/black"
            android:text="@string/due2"
            android:textSize="18dp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button17"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="android:color/transparent"
                android:drawableEnd="@drawable/ic_baseline_ballot_24"/>

            <Button
                android:id="@+id/button18"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:background="android:color/transparent"
                android:text="@string/web"
                android:textColor="@color/teal_700"
                android:textSize="15dp"
                android:gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
            android:id="@+id/button19"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="android:color/transparent"
            android:drawableEnd="@drawable/ic_baseline_ballot_24"/>

        <Button
            android:id="@+id/button20"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="android:color/transparent"
            android:text="@string/web2"
            android:textColor="@color/teal_700"
            android:textSize="15dp"
            android:gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button21"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="android:color/transparent"
                android:drawableEnd="@drawable/ic_baseline_ballot_24"/>

            <Button
                android:id="@+id/button22"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:background="android:color/transparent"
                android:text="@string/web3"
                android:textColor="@color/teal_700"
                android:textSize="15dp"
                android:gravity="left"/>
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="550dp">

        <TextView
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="android:color/transparent"
            android:textColor="@color/black"
            android:text="@string/due3"
            android:textSize="18dp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="580dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button23"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="android:color/transparent"
                android:drawableEnd="@drawable/ic_baseline_ballot_24"/>

            <Button
                android:id="@+id/button24"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:background="android:color/transparent"
                android:text="@string/data"
                android:textColor="@color/darkgreen"
                android:textSize="15dp"
                android:gravity="left"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_dashboard_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_assignment_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_access_alarm_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="670dp"
            android:background="android:color/transparent"
            android:drawableTop="@drawable/ic_baseline_mail_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>