<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="android:color/transparent"
            android:drawableEnd="@drawable/ic_baseline_list_24"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="8dp"
            android:text="@string/edit"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="80dp"
            android:text="@string/major"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:collapseColumns="2"
            android:stretchColumns="1"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:id="@+id/view1"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@color/purple_200"
                    android:gravity="center"
                    android:text="@string/view1"
                    android:textSize="20dp"
                    />

                <TextView
                    android:id="@+id/view2"
                    android:layout_marginLeft="50dp"
                    android:layout_height="150dp"
                    android:background="@color/green"
                    android:text="데이터분석및실습"
                    android:gravity="center"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@color/orange"
                    android:gravity="center"
                    android:text="사용자인터페이스"
                    android:textSize="20dp"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/view4"
                    android:layout_marginLeft="50dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/pink"
                    android:text="알고리즘"
                    android:gravity="center"
                    android:textSize="20dp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@color/darkgreen"
                    android:gravity="center"
                    android:text="웹프로그래밍기초"
                    android:textSize="20dp"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:id="@+id/view6"
                    android:layout_marginLeft="50dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/yellow"
                    android:text="채플"
                    android:gravity="center"
                    android:textSize="20dp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="670dp"
                android:background="android:color/transparent"
                android:drawableTop="@drawable/ic_baseline_dashboard_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="670dp"
                android:background="android:color/transparent"
                android:drawableTop="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="670dp"
                android:background="android:color/transparent"
                android:drawableTop="@drawable/ic_baseline_assignment_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="670dp"
                android:background="android:color/transparent"
                android:drawableTop="@drawable/ic_baseline_access_alarm_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="670dp"
                android:background="android:color/transparent"
                android:drawableTop="@drawable/ic_baseline_mail_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>